# lgaimers-lab

./: .gitignore  LICENSE  MANUAL.md  Makefile  README.md  agents.md  create_submit.sh  pyproject.toml
configs/: compression.yaml  config.yaml
configs/experiments/: README.md  pruning_example.yaml
data/: README.md
notebooks/: README.md
src/GPTQ_quantization/: 00_sample_colab2.py  00_sample_local_0.57.py  03_actorder_dynamic.py
src/compression/: README.md  REPORT_TEMPLATE.md  analyze.py  report.py
src/data/: README.md
src/evaluation/: README.md  evaluate.py  evaluate_htw.py  evaluate_local.py
src/models/: train.py
src/models/base/: README.md  exaone_base.py
src/models/variants/: README.md  drop_layers.py  prune_heads.py
src/models/variants/htw/: 00_sample_colab.py
src/utils/: README.md
