[project]
name = "lgaimers-lab"
version = "0.1.0"
description = "LGAimers Lab - EXAONE Model Compression & Analysis"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "datasets>=4.5.0",
    "hydra-core>=1.3.0",
    "mlflow>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/models", "src/utils"]
